--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## HTML+CSS Components",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass ./sass/styles.scss:styles.css -w"
   },
   "keywords": [],
   "author": "",
