--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass ./sass/styles.scss:styles.css -w"
+    "sass": "sass ./sass/styles.scss:styles.css -w",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "husky": "^8.0.0"
   }
 }
